--- a/Section 3 Python Homework (Data Types).ipynb
+++ b/Section 3 Python Homework (Data Types).ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "Question 6."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -114,39 +114,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Richard', 'Eli', 'Marquise', 'Quan', 'Pete', 'Sam']\n",
+      "['Richard', 'Steve', 'Marquise', 'Quan', 'Pete', 'Sam']\n",
       "6\n",
-      "['Richard', 'Eli', 'Marquise']\n",
-      "['Richard', 'Eli', 'Marquise', 'Angel', 'Kim']\n",
+      "['Richard', 'Steve', 'Marquise']\n",
+      "['Richard', 'Steve', 'Marquise', 'Angel', 'Kim']\n",
       "[1, 5, 10, 15, 25]\n",
-      "<built-in method copy of list object at 0x0000023122694F80>\n"
+      "<built-in method copy of list object at 0x00000237B7CA6A80>\n",
+      "[1, 5, 10, 15, 25, 'Angel', 'Kim']\n"
      ]
     }
    ],
    "source": [
     "# Question 10\n",
+    "#Create a list of at least 5 elements of mixed data types\n",
     "friendList = [\"Richard\", \"Eli\", \"Marquise\", \"Quan\", \"Pete\"]\n",
+    "#Replace a part of it with something else\n",
+    "friendList[1] = \"Steve\"\n",
+    "#Append or insert several more items to the list\n",
     "friendList.append(\"Sam\")\n",
+    "#Find and print the length of the list\n",
     "print(friendList)\n",
     "print(len(friendList))\n",
+    "#Slice a sub-section of the 1st list, and save it to a different 2nd list\n",
     "diffriendList = friendList[0:3]\n",
+    "#Print the 2nd list\n",
     "print(diffriendList)\n",
+    "#Extend your original list with the 2nd list sliced above\n",
     "workfriendList = [\"Angel\", \"Kim\"]\n",
     "diffriendList.extend(workfriendList)\n",
     "print(diffriendList)\n",
-    "simList = [1, 5, 10, 15, 25]\n",
+    "simList = [5, 1, 15, 10, 25]\n",
     "list.sort(simList)\n",
     "print(simList)\n",
     "dupsimList = simList.copy\n",
     "print(dupsimList)\n",
-    "\n"
+    "complete_list = simList + workfriendList\n",
+    "print(complete_list)"
    ]
   },
   {
