--- a/Section 3 Python Homework (Data Types).ipynb
+++ b/Section 3 Python Homework (Data Types).ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "tags": [
      "Question 6."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,6 @@
       "['Richard', 'Steve', 'Marquise']\n",
       "['Richard', 'Steve', 'Marquise', 'Angel', 'Kim']\n",
       "[1, 5, 10, 15, 25]\n",
-      "<built-in method copy of list object at 0x00000237B7CA6A80>\n",
       "[1, 5, 10, 15, 25, 'Angel', 'Kim']\n"
      ]
     }
@@ -154,51 +153,49 @@
     "list.sort(simList)\n",
     "print(simList)\n",
     "dupsimList = simList.copy\n",
-    "print(dupsimList)\n",
     "complete_list = simList + workfriendList\n",
     "print(complete_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 25, 50, 75, 100, 0, 25, 50, 75, 100, 0, 25, 50, 75, 100]]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[59], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[39mlist\u001b[39m\u001b[39m.\u001b[39msort(tuplesecond)\n\u001b[0;32m      6\u001b[0m \u001b[39mprint\u001b[39m(tuplesecond)\n\u001b[1;32m----> 8\u001b[0m tuplethird\u001b[39m=\u001b[39m (tuplesecond(\u001b[39m4\u001b[39;49m))\n\u001b[0;32m      9\u001b[0m \u001b[39mprint\u001b[39m(tuplesecond[\u001b[39m4\u001b[39m])\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
+      "25\n",
+      "[0, 0, 0, 25, 25, 25, 50, 50, 50, 75, 75, 75, 100, 100, 100]\n",
+      "(0, 25, 50, 75)\n",
+      "(0, 25, 50, 75)\n",
+      "50\n",
+      "(0, 25, 50, 75, 100, 0, 25, 50, 75, 100, 0, 25, 50, 75, 100, 0, 25, 50, 75)\n"
      ]
     }
    ],
    "source": [
     "# Question 11\n",
-    "tuplefirst= [0, 25, 50, 75, 100]\n",
-    "tuplesecond= [tuplefirst*3]\n",
+    "tuplefirst= (0, 25, 50, 75, 100)\n",
+    "tuplesecond= tuplefirst*3\n",
+    "print(tuplesecond[11])\n",
+    "print(sorted(tuplesecond))\n",
     "\n",
-    "list.sort(tuplesecond)\n",
-    "print(tuplesecond)\n",
+    "tuplethird= tuplesecond[0:4]\n",
+    "print(tuplethird)\n",
+    "test1, test2, test3, test4 = tuplethird\n",
+    "print(tuplethird)\n",
     "\n",
-    "tuplethird= (tuplesecond(4))\n",
-    "print(tuplesecond[4])\n",
-    "\n"
+    "tuplefourth = 50\n",
+    "print(tuplefourth)\n",
+    "tuplefifth= tuplesecond + tuplethird\n",
+    "print(tuplefifth)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -207,10 +204,10 @@
      "text": [
       "('Pears', ' Oranges', ' Apples')\n",
       "{'forks', 'knives', 'spoons'}\n",
-      "{'Honda', 'forks', 'knives', 'spoons'}\n",
-      "{' Keyboard', 'Door', 'knives', 'spoons', 'Honda', 'forks'}\n",
-      "{'Door'}\n",
-      "{' Keyboard', 'Door', 'knives', 'forks'}\n"
+      "{'forks', 'Honda', 'knives', 'spoons'}\n",
+      "{'forks', 'spoons', 'Door', ' Keyboard', 'knives', 'Honda'}\n",
+      "{' Keyboard'}\n",
+      "{'forks', 'Door', ' Keyboard', 'knives'}\n"
      ]
     }
    ],
@@ -234,39 +231,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1897907753.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[74], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    \"State\": \"New Jersey\"\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Team': 'Devils', 'State': 'New Jersey', 'MVP': 'Jack Hughes', 'Year': '2023', 'Rival': 'Rangers'} Team\n",
+      "dict_keys(['Team', 'State', 'MVP', 'Year', 'Rival', 'Color', 'Test list'])\n",
+      "dict_values(['Devils', 'New Jersey', 'Jamal', '2023', 'Rangers', 'Gray', ['Coding', 'is', 'hard']])\n",
+      "{}\n"
      ]
     }
    ],
    "source": [
     "# Question 13\n",
     "Dict = {\n",
-    "    \"Team\": \"Devils\"\n",
-    "    \"State\": \"New Jersey\"\n",
-    "    \"MVP\": \"Jack Hughes\"\n",
-    "    \"Year\": \"2023\"\n",
-    "    \"Rival\": \"Rangers\"}\n",
-    "print(Dict(\"Team\"))\n",
+    "    \"Team\" : \"Devils\",\n",
+    "    \"State\" : \"New Jersey\",\n",
+    "    \"MVP\" : \"Jack Hughes\",\n",
+    "    \"Year\" : \"2023\",\n",
+    "    \"Rival\" : \"Rangers\"}\n",
+    "print(Dict,(\"Team\"))\n",
     "\n",
     "Dict.update({\"MVP\": \"Jamal\"})\n",
     "Dict.update({\"Color\" : \"Gray\"})\n",
-    "Dict.update(fruitList)\n",
+    "Dict[\"Test list\"] = [\"Coding\", \"is\", \"hard\"]\n",
     "print(Dict.keys())\n",
     "print(Dict.values())\n",
     "\n",
     "secondDict = Dict.copy()\n",
-    "secondDict.pop(\"Devils\")\n",
+    "secondDict.pop(\"Team\")\n",
     "secondDict.clear()\n",
-    "print(secondDict)\n",
-    "\n"
+    "print(secondDict)\n"
    ]
   }
  ],
