--- a/Section 3 Python Homework (Data Types).ipynb
+++ b/Section 3 Python Homework (Data Types).ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "tags": [
      "Question 6."
@@ -27,19 +27,15 @@
      "text": [
       "Jamal\n",
       "French Fries\n",
-      "Sports Data Analyst\n"
+      "Backup QB\n"
      ]
     }
    ],
    "source": [
     "# Question 6\n",
-    "me= \"Jamal\"\n",
-    "print(me)\n",
-    "favorite_food= \"French Fries\"\n",
-    "print(favorite_food)\n",
-    "dream_job= \"Sports Data Analyst\"\n",
-    "print(dream_job)\n",
-    "\n"
+    "print(\"\"\"Jamal\n",
+    "French Fries\n",
+    "Backup QB\"\"\")\n"
    ]
   },
   {
