--- a/Section 3 Python Homework (Data Types).ipynb
+++ b/Section 3 Python Homework (Data Types).ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "1. An algorithm is a series of steps to solve a problem at hand.\n",
-    "2. A variable name must start with a letter or the underscore character (_).\n",
+    "2. A variable name may not start with a number or hashtag.\n",
     "3.\tCode is grammatically correct but doesn't make any sense; it does not produce the expected results.\n",
     "4.\tComplexity is the enemy of efficiency.\n",
     "5.\tNone, Else, Nonlocal, Elif, Except."
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "tags": [
      "Question 6."
@@ -22,25 +22,27 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jamal\n",
-      "French Fries\n",
-      "Backup QB\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\nJamal\\nFrench Fries\\nBackup QB\\n'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Question 6\n",
-    "print(\"\"\"Jamal\n",
+    "\"\"\"\n",
+    "Jamal\n",
     "French Fries\n",
-    "Backup QB\"\"\")\n"
+    "Backup QB\n",
+    "\"\"\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +50,7 @@
      "output_type": "stream",
      "text": [
       "23\n",
-      "o\n"
+      "l\n"
      ]
     }
    ],
@@ -61,7 +63,36 @@
     "Who_Am_I= {me, new_number}\n",
     "tiredness= float(7.5)\n",
     "print(len(greeting))\n",
-    "print(greeting[4])"
+    "print(greeting[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "G\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assign 5 different data types to 5 different variables. At least one datatype must be a string\n",
+    "\n",
+    "a = 100\n",
+    "b = \"EA Games\"\n",
+    "c = 99.9\n",
+    "d = True\n",
+    "e = range(100)\n",
+    "\n",
+    "# Print the length of your string\n",
+    "print(len(b))\n",
+    "#Print the index value of the 4th character in your string\n",
+    "print(b[3])\n"
    ]
   },
   {
@@ -87,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -100,10 +131,9 @@
    ],
    "source": [
     "# Question 9\n",
-    "name= \"Jamal\"\n",
-    "age= \"29\"\n",
-    "height= \"5 foot 11\"\n",
-    "miniBio = {\"Hi my name is \" + name + \",\" + \" I am \" + height + \" \" \"and \" + name + \" years old today\"}\n",
+    "\n",
+    "name, age, length = \"Jamal\", \"29\", \"5 foot 11\"\n",
+    "miniBio = {\"Hi my name is \" + name + \",\" + \" I am \" + length + \" \" \"and \" + name + \" years old today\"}\n",
     "print(miniBio)\n",
     "age = float(29)\n"
    ]
