--- a/Section 4 Python Homework.ipynb
+++ b/Section 4 Python Homework.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -185,123 +185,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "10\n",
-      "12\n",
-      "14\n",
-      "16\n",
-      "18\n",
-      "20\n",
-      "22\n",
-      "24\n",
-      "26\n",
-      "28\n",
-      "30\n",
-      "32\n",
-      "34\n",
-      "36\n",
-      "38\n",
-      "40\n",
-      "42\n",
-      "44\n",
-      "46\n",
-      "48\n",
-      "50\n",
-      "52\n",
-      "54\n",
-      "56\n",
-      "58\n",
-      "60\n",
-      "62\n",
-      "64\n",
-      "66\n",
-      "68\n",
-      "70\n",
-      "72\n",
-      "74\n",
-      "76\n",
-      "78\n",
-      "80\n",
-      "82\n",
-      "84\n",
-      "86\n",
-      "88\n",
-      "90\n",
-      "92\n",
-      "94\n",
-      "96\n",
-      "98\n",
-      "100\n",
-      "102\n",
-      "104\n",
-      "106\n",
-      "108\n",
-      "110\n",
-      "112\n",
-      "114\n",
-      "116\n",
-      "118\n",
-      "120\n",
-      "122\n",
-      "124\n",
-      "126\n",
-      "128\n",
-      "130\n",
-      "132\n",
-      "134\n",
-      "136\n",
-      "138\n",
-      "140\n",
-      "142\n",
-      "144\n",
-      "146\n",
-      "148\n",
-      "150\n",
-      "152\n",
-      "154\n",
-      "156\n",
-      "158\n",
-      "160\n",
-      "162\n",
-      "164\n",
-      "166\n",
-      "168\n",
-      "170\n",
-      "172\n",
-      "174\n",
-      "176\n",
-      "178\n",
-      "180\n",
-      "182\n",
-      "184\n",
-      "186\n",
-      "188\n",
-      "190\n",
-      "192\n",
-      "194\n",
-      "196\n",
-      "198\n"
+      "5050\n"
      ]
     }
    ],
    "source": [
     "# Question 5: Use range as a loop to calculate the sum of all the numbers from 1 to 100\n",
-    "start = 1\n",
-    "stop = 0\n",
-    "sum = 0\n",
-    "i = 0\n",
-    "for sum in range(1, 100):\n",
-    "    print(sum+sum)"
+    "\n",
+    "total = 0\n",
+    "for i in range(1, 101):\n",
+    "    total+=i\n",
+    "print(total)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5050\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Question 5\n",
+    "\n",
+    "range_total  = 0\n",
+    "\n",
+    "for range_values in range(101):\n",
+    "    range_total += range_values\n",
+    "\n",
+    "print(range_total)"
    ]
   },
   {
@@ -481,57 +407,58 @@
    "metadata": {},
    "source": [
     "1. What does one need to do to use a module?\n",
-    "A module is basically a bunch of related code saved in a file with the extension \".py\".\n",
+    "    A module is basically a bunch of related code saved in a file with the extension \".py\".\n",
     "\n",
     "2. Name a Module (not the DateTime Nodule) we looked at and write a line or 2 of code as an example using this module.\n",
-    "Random Module\n",
-    "Example:\n",
+    "    Random Module\n",
+    "    Example:\n",
     "\n",
-    "import random\n",
-    "list1 = [1, 2, 3, 4, 5, 6]\n",
-    "print(random.choice(list1))\n",
+    "    import random\n",
+    "    list1 = [1, 2, 3, 4, 5, 6]\n",
+    "    print(random.choice(list1))\n",
     "\n",
     "3. What is a benefit of using Exception handling?\n",
-    "Allows you to identify errors in your code. Helps with debugging.\n",
+    "    Allows you to identify errors in your code. Helps with debugging.\n",
     "\n",
     "4. what are the 4 components used for Python Exception Handling?\n",
-    "try\n",
-    "except\n",
-    "else\n",
-    "finally \n",
+    "    try\n",
+    "    except\n",
+    "    else\n",
+    "    finally \n",
     "\n",
     "5. NumPy arrays are like what Python data type?\n",
-    "Tuples\n",
+    "    Lists\n",
     "\n",
     "6. What is one of the main benefits of using NumPy arrays.\n",
-    "Occupy less memory\n",
-    "Faster\n",
-    "More convenient\n",
+    "    Occupy less memory\n",
+    "    Faster\n",
+    "    More convenient\n",
     "\n",
     "7. What is one of the main requirements about the 'dtype' of NumPy arrays?\n",
-    "You must specify the data type of an array\n",
+    "    You must specify the data type of an array\n",
     "\n",
     "8. Of the 10 uses of NumPy, name 2.\n",
-    "Maintain minimal memory\n",
-    "Alternative for lists\n",
+    "    Maintain minimal memory\n",
+    "    Alternative for lists\n",
     "\n",
     "9. Name one of the other libraries we'll use with NumPy?\n",
-    "Pandas\n",
+    "    Pandas\n",
     "\n",
     "10. What is the shape of NumPy arrays?\n",
-    "he shape is a tuple of non-negative integers that specify the dimensions, length and size of each array.\n",
+    "    The shape is a tuple of non-negative integers that specify the dimensions, length and size of each array.\n",
     "\n",
     "11. What is a Tensor?\n",
-    "An array with 3+ dimensions\n",
+    "    An array with 3+ dimensions\n",
     "\n",
     "12. Name a reason why it's better using NumPy for Data Analysis than using a Python List?\n",
-    "The combination of NumPy with other libraries implements a variety of Data Science and Analytics utilities for data wrangling and visualizations etc.\n",
-    "Also;\n",
-    "Occupy less memory\n",
-    "Faster\n",
-    "More convenient\n",
+    "    The combination of NumPy with other libraries implements a variety of Data Science and Analytics utilities for data wrangling and visualizations etc.\n",
+    "    Also;\n",
+    "    Occupy less memory\n",
+    "    Faster\n",
+    "    More convenient\n",
+    "\n",
     "13. When creating an \"empty\" array, where do the elements come from?\n",
-    "Random"
+    "    Random"
    ]
   },
   {
