--- a/Section 4 Python Homework.ipynb
+++ b/Section 4 Python Homework.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,17 @@
      "output_type": "stream",
      "text": [
       "43\n",
-      "11\n"
+      "e\n",
+      "u\n",
+      "i\n",
+      "o\n",
+      "o\n",
+      "u\n",
+      "o\n",
+      "e\n",
+      "e\n",
+      "a\n",
+      "o\n"
      ]
     }
    ],
@@ -83,7 +93,7 @@
     "for char in string1:\n",
     "    if char in \"a\" \"e\" \"i\" \"o\" \"u\":\n",
     "        vowels = vowels +1\n",
-    "print(vowels)"
+    "        print(char)"
    ]
   },
   {
