--- a/Section 5 Python Homework.ipynb
+++ b/Section 5 Python Homework.ipynb
@@ -66,7 +66,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.  4.  8. 12. 16. 20.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#8 Use NumPy .linspace() to create an array with 6 linearly spaced values between 0 and 20\n",
+    "\n",
+    "import numpy as np\n",
+    "array = np.linspace(0, 20, num=6)\n",
+    "print(array)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -81,37 +102,28 @@
       " 12.24489796 12.65306122 13.06122449 13.46938776 13.87755102 14.28571429\n",
       " 14.69387755 15.10204082 15.51020408 15.91836735 16.32653061 16.73469388\n",
       " 17.14285714 17.55102041 17.95918367 18.36734694 18.7755102  19.18367347\n",
+      " 19.59183673 20.        ]\n",
+      "[ 0.          0.40816327  0.81632653  1.2244898   1.63265306  2.04081633\n",
+      "  2.44897959  2.85714286  3.26530612  3.67346939  4.08163265  4.48979592\n",
+      "  4.89795918  5.30612245  5.71428571  6.12244898  6.53061224  6.93877551\n",
+      "  7.34693878  7.75510204  8.16326531  8.57142857  8.97959184  9.3877551\n",
+      "  9.79591837 10.20408163 10.6122449  11.02040816 11.42857143 11.83673469\n",
+      " 12.24489796 12.65306122 13.06122449 13.46938776 13.87755102 14.28571429\n",
+      " 14.69387755 15.10204082 15.51020408 15.91836735 16.32653061 16.73469388\n",
+      " 17.14285714 17.55102041 17.95918367 18.36734694 18.7755102  19.18367347\n",
       " 19.59183673 20.        ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "#8 Use NumPy .linspace() to create an array with 6 linearly spaced values between 0 and 20\n",
-    "\n",
-    "import numpy as np\n",
-    "array = np.linspace(0, 20)\n",
-    "print(array)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2919509562288\n"
      ]
     }
    ],
    "source": [
     "#9 Make a Deep Copy of the above array\n",
     "import numpy as np\n",
+    "import copy\n",
+    "\n",
     "array = np.linspace(0, 20)\n",
-    "copied_array = array.copy()\n",
-    "print(id(copied_array))\n"
+    "print(array)\n",
+    "copied_array = copy.deepcopy(array)\n",
+    "print(copied_array)\n"
    ]
   },
   {
@@ -221,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -235,26 +247,28 @@
    "source": [
     "#15 Combined and sort the following arrays into one called 'comboArray' ...\n",
     "\n",
-    "one = ([10, 11, 12, 13, 14, 15, 16, 17])\n",
-    "two = ([20, 21, 22, 23, 24, 25, 26, 27])\n",
-    "three = ([ 0, 1, 2, 3, 4, 5, 6, 7])\n",
+    "import numpy as np\n",
     "\n",
-    "combo= np.concatenate((one,two,three))\n",
-    "combo = np.sort(combo)\n",
-    "print(combo)"
+    "one = np.array([10, 11, 12, 13, 14, 15, 16, 17])\n",
+    "two = np.array([20, 21, 22, 23, 24, 25, 26, 27])\n",
+    "three = np.array([ 0, 1, 2, 3, 4, 5, 6, 7])\n",
+    "\n",
+    "conArray= np.concatenate((one,two,three))\n",
+    "comboArray= np.sort(conArray)\n",
+    "print(comboArray)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "[ 3  4  5  6  7 10 11 12 13 14 15 16 17 20 21 22 23 24 25 26 27]\n",
+      "1\n",
+      "[ 2  3  4  5  6  7 10 11 12 13 14 15 16 17 20 21 22 23 24 25 26 27]\n",
       "[ 3  4  5  6  7 10 11 12 13 14 15 16]\n",
       "[22 23 24 25 26 27]\n",
       "[ 0  1  2  3  4  5  6  7 10 11 12 13 14 15]\n",
@@ -266,81 +280,26 @@
    "source": [
     "#16 Take 'comboArray' and perform the following slicing activities:\n",
     "\n",
-    "\n",
-    "sec1 = combo[2]\n",
+    "sec1 = comboArray[1]\n",
     "print(sec1)\n",
     "\n",
-    "sec2 = combo[3:]\n",
+    "sec2 = comboArray[2:]\n",
     "print(sec2)\n",
     "\n",
-    "sec3 = combo[3:15]\n",
+    "sec3 = comboArray[3:15]\n",
     "print(sec3)\n",
     "\n",
-    "sec4 = combo[-6:]\n",
+    "sec4 = comboArray[-6:]\n",
     "print(sec4)\n",
     "\n",
-    "sec5 = combo[0:-10]\n",
+    "sec5 = comboArray[0:-10]\n",
     "print(sec5)\n",
     "\n",
-    "sec6 = combo[16::2]\n",
+    "sec6 = comboArray[16::2]\n",
     "print(sec6)\n",
     "\n",
-    "sec7 = combo[::-5]\n",
+    "sec7 = comboArray[::-5]\n",
     "print(sec7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[ 17.    70.    10.8 ]\n",
-      "  [ 27.    80.3   20.71]]\n",
-      "\n",
-      " [[ 37.    90.02  30.8 ]\n",
-      "  [ 47.   101.    41.  ]]\n",
-      "\n",
-      " [[ 57.4   94.    50.7 ]\n",
-      "  [ 32.    85.5   36.2 ]]]\n",
-      "[[[ 17.    70.    10.8 ]\n",
-      "  [ 27.    80.3   20.71]]\n",
-      "\n",
-      " [[ 37.    90.02  30.8 ]\n",
-      "  [ 47.   101.    41.  ]]\n",
-      "\n",
-      " [[ 57.4   94.    50.7 ]\n",
-      "  [ 32.    85.5   36.2 ]]]\n",
-      "[[[0.00000e+00 0.00000e+00 1.07000e+00]\n",
-      "  [1.70000e+02 7.21000e+02 1.07107e+02]]\n",
-      "\n",
-      " [[3.40000e+02 1.40140e+03 2.15070e+02]\n",
-      "  [5.10000e+02 2.17000e+03 3.24210e+02]]\n",
-      "\n",
-      " [[6.86800e+02 1.68000e+03 4.28000e+02]\n",
-      "  [2.55000e+02 1.08500e+03 2.72850e+02]]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "#17 Using simple math operations, broadcast the addition (+), division (/), and multiplication (*) operations for these 2 arrays --\n",
-    "\n",
-    "data_Array = np.array([[[ 0.0,  0.0,  0.10], [10.0, 10.30, 10.01]],\n",
-    "        [[20.0, 20.02, 20.10], [30.0, 31.0, 30.30]],\n",
-    "        [[40.40, 24.0, 40.0], [15.0, 15.5, 25.5]]])\n",
-    "\n",
-    "data_Array2 = np.array([[17.0, 70.0, 10.7]])\n",
-    "\n",
-    "addition = (data_Array + data_Array2)\n",
-    "division = (data_Array + data_Array2)\n",
-    "multiplication = (data_Array * data_Array2)\n",
-    "\n",
-    "print(addition)\n",
-    "print(division)\n",
-    "print(multiplication)"
    ]
   },
   {
