--- a/Section 5 Python Homework.ipynb
+++ b/Section 5 Python Homework.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "4. To permanently sort a DataFrame, which keyword should one use with the df.sort() method?\n",
     "\n",
-    "    values\n",
+    "    inplace\n",
     "\n",
     "5. What is a CSV?\n",
     "\n",
