--- a/Section 7/Section 7 SQL Homework.ipynb
+++ b/Section 7/Section 7 SQL Homework.ipynb
@@ -93,7 +93,7 @@
     "\n",
     "WHERE Make IS 'TESLA' OR 'CHEVROLET'\n",
     "\n",
-    "ORDER BY ModelYear ASC"
+    "ORDER BY ModelYear DESC"
    ]
   },
   {
@@ -103,13 +103,15 @@
    "source": [
     "Question 4: Using EVCharging, Write a query to find out how many many times those stations were used. Order them by the most used to the least used and limit the output to 5 records.\n",
     "\n",
-    "SELECT DISTINCT kwhTotal, chargeTimeHrs, chargeTimeMins\n",
+    "SELECT StationID, Count(*) as numUses\n",
     "\n",
     "FROM EVCharging\n",
     "\n",
-    "ORDER BY kwhTotal DESC\n",
+    "GROUP BY StationID \n",
     "\n",
-    "LIMIT 5\n"
+    "ORDER BY stationId DESC\n",
+    "\n",
+    "LIMIT 5"
    ]
   },
   {
@@ -119,13 +121,15 @@
    "source": [
     "Question 5: Using EVCharging, For the folks who charged longer than 0.5 hours, show the min and max of the charging time for each user. Your output columns should be userid, minTime, and maxTime. Order this result set by the last two columns respectively.\n",
     "\n",
-    "SELECT MIN(chargeTimeHrs) as 'minhours', MAX(chargeTimeHrs) as 'maxHours', userId\n",
+    "SELECT MIN(chargeTimeHrs) as 'minTime', MAX(chargeTimeHrs) as 'maxTime', userId\n",
     "\n",
     "FROM EVCharging\n",
     "\n",
     "WHERE chargeTimeHrs > .5\n",
     "\n",
-    "ORDER BY 2"
+    "GROUP BY userId\n",
+    "\n",
+    "ORDER BY 2, 3"
    ]
   },
   {
@@ -137,7 +141,11 @@
     "\n",
     "SELECT Weekday, ROUND(avg(chargeTimeHrs),2) as 'Highest AVG Charge Time'\n",
     "\n",
-    "FROM EVcharging"
+    "FROM EVcharging\n",
+    "\n",
+    "group by weekday\n",
+    "\n",
+    "order by avg(chargeTimeHrs) DESC"
    ]
   },
   {
@@ -165,15 +173,17 @@
    "source": [
     "Question 3: Using dimfacility and factCharge, write a query to find out which type of facility (GROUP BY) has the most amount of charging stations. Return type Facility and name the calculated column numStation. Order the result set from highest to lowest number of charging stations.\n",
     "\n",
-    "SELECT df.typeFacility, COUNT(*) as 'numStation'\n",
+    "SELECT df.typeFacility, COUNT(DISTINCT fc.stationID) as 'numStation'\n",
     "\n",
-    "FROM factCharge a\n",
+    "FROM factCharge fc\n",
     "\n",
-    "INNER JOIN dimFacility df on a.facilityID= df.FacilityKey\n",
+    "INNER JOIN dimFacility df \n",
     "\n",
-    "GROUP BY df.typeFacility\n",
+    "ON fc.facilityID = df.FacilityKey\n",
     "\n",
-    "ORDER BY numStation DESC\n",
+    "GROUP BY 1\n",
+    "\n",
+    "ORDER BY 2 DESC\n",
     "\n"
    ]
   },
@@ -204,7 +214,7 @@
     "\n",
     "HAVING minTime > 1\n",
     "\n",
-    "ORDER BY 2 DESC;"
+    "ORDER BY 2,3 DESC;"
    ]
   }
  ],
