--- a/Section 8/Section 8 Homework (API Project).ipynb
+++ b/Section 8/Section 8 Homework (API Project).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,28 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Response [200]>\n",
-      "{'coord': {'lon': -73.5878, 'lat': 45.5088}, 'weather': [{'id': 804, 'main': 'Clouds', 'description': 'overcast clouds', 'icon': '04d'}], 'base': 'stations', 'main': {'temp': 301.93, 'feels_like': 301.45, 'temp_min': 300.71, 'temp_max': 302.77, 'pressure': 1005, 'humidity': 39}, 'visibility': 10000, 'wind': {'speed': 5.14, 'deg': 100, 'gust': 7.72}, 'clouds': {'all': 100}, 'dt': 1686607191, 'sys': {'type': 1, 'id': 498, 'country': 'CA', 'sunrise': 1686560719, 'sunset': 1686616991}, 'timezone': -14400, 'id': 6077243, 'name': 'Montreal', 'cod': 200} \n",
-      "\n",
-      "\n",
-      "301.93\n",
-      "39\n",
-      "overcast clouds\n",
-      "Montreal\n",
+      "Connection error occurred: Invalid URL 'None': No scheme supplied. Perhaps you meant https://None?\n",
       "Today's weather in Montreal is as follows;\n",
       "\n",
-      "301.93 degrees\n",
+      "293.95 degrees\n",
       "\n",
-      "39 humidity\n",
+      "58 humidity\n",
       "\n",
-      "overcast clouds as the forecast\n",
+      "broken clouds as the forecast\n",
       "\n"
      ]
     }
@@ -78,7 +71,7 @@
     "import requests\n",
     "try:\n",
     "    #Send GET request to the API (Question 8)\n",
-    "    response = requests.get('http://api.openweathermap.org/data/2.5/weather?q=Montreal&appid=182cac1254f70347ff44ec300a075506')\n",
+    "    response = requests.get(api_key)\n",
     "    print(response)\n",
     "\n",
     "\n",
@@ -114,6 +107,38 @@
     "#Question 13 - Need more support/help with this one.\n",
     "\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "293.95\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Question 13 \n",
+    "import json\n",
+    "from dotenv import load_dotenv\n",
+    "import pandas\n",
+    "import os\n",
+    "import requests\n",
+    "\n",
+    "#Load API Key\n",
+    "load_dotenv(api_key)\n",
+    "\n",
+    "#Enhance your project by adding more features, such as handling multiple locations\n",
+    "temperature = data ['main']['temp']\n",
+    "humidity = data ['main']['humidity']\n",
+    "weather_description = data ['weather'][0]['description']\n",
+    "city = data ['name']\n",
     "\n"
    ]
   }
