--- a/Section 9/Data Cleaning Lab.ipynb
+++ b/Section 9/Data Cleaning Lab.ipynb
@@ -112,7 +112,6 @@
    "metadata": {},
    "source": [
     "#Section 4\n",
-    "#Working on \"efficency\"  and \"fastCharge\" columns\n",
     "#Pull query for both \"effiency and \"fastCharge\" columns\n",
     "\n",
     "SELECT efficiency, fastCharge\n",
@@ -159,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Section 5 Working with Rapid Charge\n",
+    "#Section 5\n",
     "#Write query that counts and groups all records based on \"RapidCharge\"\n",
     "\n",
     "SELECT RapidCharge, Count(*)\n",
@@ -196,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Section 6 Visualize the Powertrain records\n",
+    "#Section 6\n",
     "#Write query that selects Powertrain and counts all the records\n",
     "\n",
     "SELECT PowerTrain, count(*) as 'Count'\n",
